<resources>
    <string name="app_name">CalculatorAtAPI-17</string>
    <string name="all_clear">AC</string>
    <string name="toggle_key">+/-</string>
    <string name="square_root">"\u221A"</string>
    <string name="division">"\u00F7"</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiplication">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subtraction">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="addition">+</string>
    <string name="clear">C</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="equal">=</string>
</resources>
