<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/parentBg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:textSize="50sp"
        android:textDirection="ltr"
        android:gravity="right"
        android:text="0"
        android:textColor="@color/output"
        android:background="@color/outputBackground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/allClearBtn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/specialBtn"
                android:onClick="clickAllClear"
                android:text="@string/all_clear"
                android:textColor="@color/colorBtnFront"
                android:textSize="40dp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/toggleBtn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/specialBtn"
                android:onClick="clickToggleBtn"
                android:text="@string/toggle_key"
                android:textColor="@color/colorBtnFront"
                android:textSize="40dp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/squareRootBtn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/specialBtn"
                android:onClick="clickSquareRoot"
                android:text="@string/square_root"
                android:textColor="@color/colorBtnFront"
                android:textSize="40dp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/division"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:textColor="@color/colorBtnFront"
                android:typeface="monospace"
                android:background="@color/operatorsBtn"
                android:onClick="clickOperator"
                android:text="@string/division"
                android:textSize="40dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:onClick="clickNum"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBtnBck"
                android:textColor="@color/colorBtnFront"
                android:typeface="monospace"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:text="@string/seven"
                android:textSize="40dp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorBtnFront"
                android:typeface="monospace"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:text="@string/eight"
                android:textSize="40dp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:onClick="clickNum"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBtnBck"
                android:textColor="@color/colorBtnFront"
                android:typeface="monospace"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:text="@string/nine"
                android:textSize="40dp" />

            <Button
                android:id="@+id/multiple"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorBtnFront"
                android:typeface="monospace"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/operatorsBtn"
                android:onClick="clickOperator"
                android:text="@string/multiplication"
                android:textSize="40dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBtnBck"
                android:textColor="@color/colorBtnFront"
                android:typeface="monospace"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:onClick="clickNum"
                android:text="@string/four"
                android:textSize="40dp" />

            <Button
                android:id="@+id/five"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:onClick="clickNum"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBtnBck"
                android:textColor="@color/colorBtnFront"
                android:typeface="monospace"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:text="@string/five"
                android:textSize="40dp" />

            <Button
                android:id="@+id/six"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBtnBck"
                android:textColor="@color/colorBtnFront"
                android:typeface="monospace"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:onClick="clickNum"
                android:text="@string/six"
                android:textSize="40dp" />

            <Button
                android:id="@+id/subtraction"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorBtnFront"
                android:typeface="monospace"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/operatorsBtn"
                android:onClick="clickOperator"
                android:text="@string/subtraction"
                android:textSize="40dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:onClick="clickNum"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBtnBck"
                android:textColor="@color/colorBtnFront"
                android:typeface="monospace"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:text="@string/one"
                android:textSize="40dp" />

            <Button
                android:id="@+id/two"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/two"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBtnBck"
                android:textColor="@color/colorBtnFront"
                android:typeface="monospace"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:textSize="40dp"
                android:onClick="clickNum" />

            <Button
                android:id="@+id/three"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBtnBck"
                android:textColor="@color/colorBtnFront"
                android:typeface="monospace"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:onClick="clickNum"
                android:text="@string/three"
                android:textSize="40dp" />

            <Button
                android:id="@+id/addition"
                android:layout_width="100dp"
                android:background="@color/operatorsBtn"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorBtnFront"
                android:typeface="monospace"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:onClick="clickOperator"
                android:text="@string/addition"
                android:textSize="40dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/specialBtn"
                android:onClick="clearCurrentOperand"
                android:text="@string/clear"
                android:textColor="@color/colorBtnFront"
                android:textSize="40dp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/zero"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBtnBck"
                android:textColor="@color/colorBtnFront"
                android:typeface="monospace"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:onClick="clickNum"
                android:text="@string/zero"
                android:textSize="40dp" />

            <Button
                android:id="@+id/decimal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:onClick="clickNum"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBtnBck"
                android:textColor="@color/colorBtnFront"
                android:typeface="monospace"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:text="@string/decimal"
                android:textSize="40dp" />
            <Button
                android:id="@+id/equal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorBtnFront"
                android:typeface="monospace"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/operatorsBtn"
                android:onClick="clickOperator"
                android:text="@string/equal"
                android:textSize="40dp"/>

        </LinearLayout>





    </LinearLayout>

</LinearLayout>
